# pyta

./: .gitignore  README.md  pyproject.toml
notebooks/: Heatmap.ipynb
src/pyta/: main.py
