[tool.poetry]
name = "pyta"
version = "0.1.0"
description = ""
authors = ["Dolf Andringa <dolfandringa@gmail.com>"]
readme = "README.md"
packages = [{include = "pyta", from = "src"}]

[tool.poetry.scripts]
pyta = 'pyta.main:main'
visualize= 'jupyterlab.labapp:main'

[tool.poetry.dependencies]
python = ">3.9.1,<3.12"
pandas = "^2.0.2"
pyarrow = "^12.0.1"
pytest-mock = "^3.11.1"
pytest-parallel = "^0.1.1"
jedi-language-server = "^0.40.0"
tables = "^3.8.0"
pynput = "^1.7.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
pytest = "^7.4.0"
pyright = "^1.1.315"
pytest-mock = "^3.11.1"
black = "^23.3.0"
python-lsp-server = "^1.7.3"


[tool.poetry.group.jupyter.dependencies]
jupyterlab = "<4.0.0a0"
jupyter = "^1.0.0"
jupyterlab-lsp = "^4.2.0"
ruff-lsp = "^0.0.35"
itables = "^1.5.3"
seaborn = "^0.12.2"
plotly = "^5.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
